--- a/Autos/src/styles.css
+++ b/Autos/src/styles.css
@@ -1,7 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 *{
+    box-sizing: border-box; 
     margin: 0;
     padding: 0;
+}
+html{
+    font-family: 'DM Sans', sans-serif;
 }
 
 body{
@@ -9,17 +13,22 @@ body{
 }
 
 .main-container{
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
     min-width: 320px;
-    height: auto;
-    margin: 200px auto;
-    display: grid;
-    place-items: center;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 50px;
+    height: 334px;
+    text-align: center;
 }    
-    
+
+.logo-title{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    width: 80%;
+    margin: 40px auto;
+}
     
 
  
