--- a/Autos/src/styles.css
+++ b/Autos/src/styles.css
@@ -5,30 +5,61 @@
     padding: 0;
 }
 html{
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Quicksand', sans-serif;
 }
-
 body{
     background: rgb(51 116 137);
 }
 
 .main-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
-    min-width: 320px;
-    height: 334px;
-    text-align: center;
+    height: auto;
+    display: grid;
+    margin: 150px auto;
+    place-items: center;
 }    
 
 .logo-title{
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    align-items: center;
-    width: 80%;
-    margin: 40px auto;
+    grid-template-rows: auto auto;
+    min-width: 320px;
 }
-    
 
- 
+.logo-title img {
+    width: 250px;
+    justify-self: center;
+    margin-bottom: 10px;
+}
+
+.logo-title h1 {
+    font-size: 2.4rem;
+    text-align: center;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.set-data h2{
+    color: white;
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.set-data .formulario {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-size: 1rem;
+  }
+
+
+  .input {
+    background-color: rgba(255, 255, 255, 0.753);
+    border: none;
+    border-radius: 8px;
+    height: 30px;
+    font-size: 1rem;
+    padding: 6px;
+    margin-bottom: 12px;
+  }
+
