--- a/Autos/src/styles.css
+++ b/Autos/src/styles.css
@@ -38,14 +38,23 @@ body{
     margin-bottom: 30px;
 }
 
-.set-data h2{
+.set-data, .Edit-data {
+    width: 100%;
+    min-width: 320px;
+    max-width: 900px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.set-data h2, .Edit-data h2{
     color: white;
     font-size: 1.8rem;
     text-align: center;
     margin-bottom: 15px;
 }
 
-.set-data .formulario {
+
+.set-data .formulario, .Edit-data .formulario_1 {
     display: flex;
     flex-direction: column;
     color: white;
@@ -61,5 +70,22 @@ body{
     font-size: 1rem;
     padding: 6px;
     margin-bottom: 12px;
+  }
+
+  .button{
+    background-color:rgb(26 82 100);;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: bold;
+    height: 50px;
+    margin-bottom: 30px;
+  }
+
+  .show-data {
+      margin-bottom: 30px;
   }
 
